--- a/style.css
+++ b/style.css
@@ -70,5 +70,22 @@ ul li a{
   width: 100%;
 }
 
+#Mactan img{
+  height: 100%;
+  width: 100%;
+}
 
+#Sinulog img{
+  height: 100%;
+  width: 100%;
+}
 
+#Asturias img{
+  height: 100%;
+  width: 100%;
+}
+
+#Jeje img{
+  height: 100%;
+  width: 100%;
+}
