--- a/style.css
+++ b/style.css
@@ -131,8 +131,8 @@ ul li a{
 #LetSimalaRide h1{
   position: absolute;
   top: 0%;
-  left: 20%;
-  font-size: 50px;
+  left: 25%;
+  /* font-size: 50px; */
   font-family: Gayathri;
   text-align: center;
 }
