--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header{
 
 
 ul{
-    float: right;
+    float: left;
     margin-top: 5px;
     margin-right: 5%;
     background-size: cover; 
@@ -158,7 +158,7 @@ ul li a{
   position: absolute;
   top: 0%;
   left: 9%;
-  font-size: 50px;
+  font-size: 2.5vw;
   font-family: Gayathri;
   text-align: center;
 }
@@ -184,8 +184,8 @@ ul li a{
 #LetHouse h1{
   position: absolute;
   top: 0%;
-  left: 9%;
-  font-size: 50px;
+  left: 18%;
+  font-size: 2.5vw;
   font-family: Gayathri;
   text-align: center;
 }
@@ -211,13 +211,67 @@ ul li a{
 #LetFavorite h1{
   position: absolute;
   top: 0%;
-  left: 9%;
-  font-size: 50px;
+  left: 20%;
+  font-size: 3vw;
   font-family: Gayathri;
   text-align: center;
 }
 
 #LetFavorite img{
+  position: absolute;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  opacity: 50%;
+}
+
+#LetMactan{
+  position: absolute;
+  top: 428%;
+  left: 0%;
+  height: 30%;
+  width: 100%;
+  background-color: white;
+  
+}
+
+#LetMactan h1{
+  position: absolute;
+  top: 0%;
+  left: 10%;
+  font-size: 3vw;
+  font-family: Gayathri;
+  text-align: center;
+}
+
+#LetMactan img{
+  position: absolute;
+  left: 0%;
+  height: 100%;
+  width: 100%;
+  opacity: 50%;
+}
+
+#LetSinulog{
+  position: absolute;
+  top: 458%;
+  left: 0%;
+  height: 30%;
+  width: 100%;
+  background-color: white;
+  
+}
+
+#LetSinulog h1{
+  position: absolute;
+  top: 0%;
+  left: 10%;
+  font-size: 3vw;
+  font-family: Gayathri;
+  text-align: center;
+}
+
+#LetSinulog img{
   position: absolute;
   left: 0%;
   height: 100%;
