--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     margin: 0;
   }
 #headtitle a:hover, #headtitle a:active {
-    color: black;
+    color: rgb(71, 155, 76);
     background-color: #fffd76;
     padding: 5px;
   }
@@ -21,7 +21,7 @@ header{
     position: absolute;
     height: 3%;
     width: 100%;
-    background-color: white;
+    background-color: #fffd76;
 }
 
 
