--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header{
 
 
 #headtitle h1 a{
-  color: black;
+  color: rgb(71, 155, 76);
   font-family: 'Krona One';
   text-decoration: none;
   font-size: 10px;
