--- a/style.css
+++ b/style.css
@@ -399,13 +399,23 @@ header{
   position: absolute;
   top: 598%;
   left: 0%;
-  height: 50%;
+  height: 100%;
   width: 100%;
   background-color: white;
 }
 
+#You img{
+  position: absolute;
+  left: 0%;
+  height: 200%;
+  width: 100%;
+  opacity: 50%;
+  padding: 5px;
+  filter: drop-shadow(8px 8px 10px rgb(71, 155, 76));
+}
+
 #You h1{
-  color: yellowgreen;
+  color: white;
   text-align: center;
   font-size: 3vw;
   font-family: Gayathri;
